--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <body>
 	<div id="app">
 		<input v-model="num" placeholder="edit me">
-		<p>num is: {{ num }}</p>
-		<p>computed: {{ translate }}</p>
+		<div>
+			<p>Terjemahan:</p>
+			<h3>{{ translate }}</h3>
+		</div>
 	</div>
 	<script src="./main.js"></script>
 </body>
