--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="app">
-		<input v-model="num" placeholder="edit me">
+		<input v-model="num" placeholder="Input">
 		<div>
 			<p>Terjemahan:</p>
 			<h3>{{ translate }}</h3>
