--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Calculate</title>
+	<title>Indonesian Numerals</title>
 	<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 <body>
