--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
 	<meta charset="UTF-8">
 	<title>Indonesian Numerals</title>
 	<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div id="app">
-		<input v-model="num" placeholder="Input">
-		<div>
-			<p>Terjemahan:</p>
-			<h3>{{ translate }}</h3>
+		<div class="container ">
+			<div class="d-flex justify-content-center m-3">
+				<input v-model="num" placeholder="Input" style="font-size: 200%" class="form-control text-center">
+			</div>
+			<div class="d-flex justify-content-center">
+				<h3>Terjemahan</h3>
+			</div>
+			<div class="d-flex justify-content-center text-primary">
+				<h1>{{ translate }}</h1>
+			</div>
 		</div>
 	</div>
 	<script src="./main.js"></script>
