--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 	<div id="app">
 		<div class="container ">
-			<div class="d-flex justify-content-center m-3">
+			<div class="d-flex justify-content-center mt-5">
 				<input v-model="num" placeholder="Input" style="font-size: 200%" class="form-control text-center">
 			</div>
-			<div class="d-flex justify-content-center">
+			<div class="d-flex justify-content-center m-4">
 				<h3>Terjemahan</h3>
 			</div>
 			<div class="d-flex justify-content-center text-primary">
