--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
 	<div id="app">
-		<div class="container ">
-			<div class="d-flex justify-content-center mt-5">
-				<input v-model="num" placeholder="Input" style="font-size: 200%" class="form-control text-center">
+		<div class="container d-flex justify-content-center flex-column text-center mt-5">
+			<div class="mt-5">
+				<input v-model="num" placeholder="Input" style="font-size: 250%;" class="form-control text-center">
 			</div>
-			<div class="d-flex justify-content-center m-4">
-				<h3>Terjemahan</h3>
+			<div class="m-4">
+				<h1>Terjemahan</h1>
 			</div>
-			<div class="d-flex justify-content-center text-primary">
+			<div class="text-primary">
 				<h1>{{ translate }}</h1>
 			</div>
 		</div>
